From Demo To MyDev/sample/retrieveSource/objects/ContractProduct__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Количество</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommissionPercent__c</fullName>
        <label>КВ %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Условие сотрудничества</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KV_RUB__c</fullName>
        <label>КВ (РУБ)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Продукт</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Продукт условий сотрудничества</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Contract__c</columns>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>CommissionPercent__c</columns>
        <columns>KV_RUB__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{0000000}</displayFormat>
        <label>Продукт</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Продукты условий сотрудничества</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>